fix sonar