@@ -151,9 +151,9 @@
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>3.2.5</version>
                 <configuration>
-                    <argLine>
-                        --add-opens java.base/java.util=ALL-UNNAMED
-                    </argLine>
+<!--                    <argLine>-->
+<!--                        &#45;&#45;add-opens java.base/java.util=ALL-UNNAMED-->
+<!--                    </argLine>-->
                 </configuration>
             </plugin>
 
